--- a/index.html
+++ b/index.html
@@ -19,11 +19,32 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-10 px-0">
-                        <iframe style="width: 100%; height: 80.7vh;"
-                            src="https://www.youtube.com/embed/4mxXdCUXSSs?start=165&autoplay=1&showinfo=0&controls=0"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                        <div class="vidframe">
+                            <iframe style="width: 100%; height: 80.7vh;"
+                                src="https://www.youtube.com/embed/4mxXdCUXSSs?start=165&autoplay=1&showinfo=0&controls=0"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                            <div class="newtabs">
+                                <ul class="nav nav-tabs">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" data-toggle="tab" href="#n1">Into Africa</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" data-toggle="tab" href="#n2">PROGRAMMING</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" data-toggle="tab" href="#n3">policy</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" data-toggle="tab" href="#n4">Stock</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" data-toggle="tab" href="#n5">updates</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                         <div class="n-marg bg-white">
                             <div class="row">
                                 <div class="col-md-2">
@@ -32,9 +53,22 @@
                                     </h4>
                                 </div>
                                 <div class="col-md-10">
+                                    <div class="">
+
+                                    </div>
                                     <div class="mt-3 mainNe">
-                                        <p class="font-weight-bold mb-0">Into Africa:</p>
-                                        <p>Tech leaders weigh in on Jack Dorsey’s planned move to the continent</p>
+                                        <div id="myTabContent" class="tab-content">
+                                            <div class="tab-pane fade active show" id="n1">
+                                                <p class="font-weight-bold mb-0">Into Africa:</p>
+                                                <p>Tech leaders weigh in on Jack Dorsey’s planned move to the continent
+                                                </p>
+                                            </div>
+                                            <div class="tab-pane fade" id="n2">
+                                                <p class="font-weight-bold mb-0">Oil Tumbles</p>
+                                                <p>Global Response seems faster than other Outbreaks
+                                                </p>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -42,9 +76,10 @@
                     </div>
                     <div class="col-md-2 px-0">
                         <div class="bl-bg">
-                            <h2 class="mb-0">4:20pm</h2>
-                            <p>Friday, January 20</p>
-                            <img class="logo" width="85" src="./img/logo.png" />
+                            <img class="logo" width="120" style="margin-left: -11px;" src="./img/logo.png" />
+                            <h3 class="mb-0">4:20pm</h3>
+                            <p class="small">Friday, January 20</p>
+
                         </div>
                         <div class="bannerSlide">
                             <div class="">
@@ -58,7 +93,7 @@
                                 <img class="img-fluid" src="./img/ads/ad2.png" />
                             </div>
                         </div>
-                        <div class="bannerSlide">
+                        <div class="bannerSlide2">
                             <div class="">
                                 <img class="img-fluid"
                                     src="./img/ads/thenesthub_65398946_1419664398215502_5035682237982120172_n.jpg" />
@@ -68,7 +103,7 @@
                                     src="./img/ads/thenesthub_72232483_151920056179683_4825483581740487654_n.jpg" />
                             </div>
                         </div>
-                        <div class="bl-bg">
+                        <!-- <div class="bl-bg">
                             <div class="media">
                                 <h4 class="d-flex rd-bg">
                                     3
@@ -78,7 +113,7 @@
                                 </div>
                                 </h4>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -103,6 +138,8 @@
 </body>
 <!-- Slick -->
 <script type="text/javascript" src="./js/jquery.min.js"></script>
+<script src="./js/popper.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
 <script type="text/javascript" src="./slick/slick.js"></script>
 <script>
     $(document).ready(function () {
@@ -110,10 +147,20 @@
             dots: false,
             fade: true,
             autoplay: true,
+            delay: 4,
             speed: 300,
             arrows: false,
             infinite: true,
-            speed: 300,
+            slidesToShow: 1,
+            pauseOnHover: false
+        });
+        $('.bannerSlide2').slick({
+            dots: false,
+            fade: true,
+            autoplay: true,
+            speed: 700,
+            arrows: false,
+            infinite: true,
             slidesToShow: 1,
             pauseOnHover: false
         });
