--- a/index.html
+++ b/index.html
@@ -21,14 +21,24 @@
                     <div class="col-md-10 px-0">
                         <div class="vidframe">
 
-                            <iframe class="toogleVid2" style="width: 100%; height: 80.7vh;"
-                                src="https://www.youtube.com/embed/eRHjRCY7-3Q?autoplay=1&showinfo=0&controls=0"
+
+                            <!-- Using API -->
+                            <!-- <div id="player" class="youtube-player"></div> -->
+
+                            <iframe class="toogleVid3" style="width: 100%; height: 80.7vh;"
+                                src="https://www.youtube.com/embed/abjD_4el_Z8?autoplay=1&showinfo=0&controls=0"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+
+                            <iframe class="toogleVid" style="width: 100%; height: 80.7vh;"
+                                src="https://www.youtube.com/embed/UCQEwpWndd0?autoplay=1&showinfo=0&controls=0"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
 
 
-                            <iframe class="toogleVid" style="width: 100%; height: 80.7vh;"
+                            <iframe class="toogleVid2" style="width: 100%; height: 80.7vh;"
                                 src="https://www.youtube.com/embed/jBFFJPx6v-c?autoplay=1&showinfo=0&controls=0"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -57,20 +67,22 @@
                         </div>
                         <div class="n-marg bg-white">
                             <div class="row">
-                                <div class="col-md-2">
+                                <!-- <div class="col-md-2">
                                     <h4 class="bgred-headl text-uppercase text-center">
                                         Startups
                                     </h4>
-                                </div>
+                                </div> -->
                                 <div class="col-md-10">
                                     <div class="">
 
                                     </div>
                                     <div class="mt-3 mainNe">
-                                        <div id="myTabContent" class="tab-content">
+                                        <div id="myTabContent" class="tab-content pl-3">
                                             <div class="tab-pane fade active show" id="n1">
-                                                <p class="font-weight-bold mb-0">Into Africa:</p>
-                                                <p>Tech leaders weigh in on Jack Dorsey’s planned move to the continent
+                                                <p class="font-weight-bold mb-0">Amazon joins the $1T club as Alphabet
+                                                    dips out</p>
+                                                <p>American tech companies almost did something neat today before
+                                                    messing it up. After reporting earnings yesterday.
                                                 </p>
                                             </div>
                                             <div class="tab-pane fade" id="n2">
@@ -86,31 +98,25 @@
                     </div>
                     <div class="col-md-2 px-0">
                         <div class="bl-bg">
-                            <img class="logo" width="120" style="margin-left: -11px;" src="./img/logo.png" />
+                            <img class="logo mb-1" width="170" style="margin-left: -11px;" src="./img/logo.png" />
                             <h3 class="mb-0">4:20pm</h3>
                             <p class="small">Friday, January 20</p>
 
                         </div>
                         <div class="bannerSlide">
                             <div class="">
-                                <img class="img-fluid" src="./img/ads/ad1.png" />
+                                <img class="img-fluid" src="./img/ads/swt1.jpeg" />
                             </div>
                             <div class="">
-                                <img class="img-fluid"
-                                    src="./img/ads/thenesthub_83996296_2489310457983638_834258738537890018_n.jpg" />
-                            </div>
-                            <div class="">
-                                <img class="img-fluid" src="./img/ads/ad2.png" />
+                                <img class="img-fluid" src="./img/ads/swt2.jpeg" />
                             </div>
                         </div>
                         <div class="bannerSlide2">
                             <div class="">
-                                <img class="img-fluid"
-                                    src="./img/ads/thenesthub_65398946_1419664398215502_5035682237982120172_n.jpg" />
+                                <img class="img-fluid" src="./img/ads/swt3.jpeg" />
                             </div>
                             <div class="">
-                                <img class="img-fluid"
-                                    src="./img/ads/thenesthub_72232483_151920056179683_4825483581740487654_n.jpg" />
+                                <img class="img-fluid" src="./img/ads/swt4.jpeg" />
                             </div>
                         </div>
                         <!-- <div class="bl-bg">
@@ -134,10 +140,11 @@
                             Rohingyas still 'at serious risk of genocide' in Myanmar, International Court of Justice
                             rules
                         </span>
-                        <!-- <span class="title">tonight</span> -->
+                        <span class="px-3">||</span>
                         <span>
                             The United Nations' court orders Myanmar to take urgent measures to protect Rohingyas from
                             persecution and atrocities.</span>
+                        <span class="px-3">||</span>
                         <span>Rohingya Muslims remain "at serious risk of genocide" in Myanmar, the International Court
                             of
                             Justice has ruled.</span>
@@ -151,9 +158,13 @@
 <script src="./js/popper.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
 <script type="text/javascript" src="./slick/slick.js"></script>
+<!-- <!-- <script src="./js/youtube.js"></script> --> -->
 <script>
     $(document).ready(function () {
         $('.toogleVid2').hide();
+        $('.toogleVid3').hide();
+
+
         $('.bannerSlide').slick({
             dots: false,
             fade: true,
